Update and rename NoahLileAbout.html to Noah-Lile-About.html

--- a/Noah-Lile-About.html
+++ b/Noah-Lile-About.html
@@ -32,10 +32,10 @@
     <header class="main-header">
         <img src="images/noah2.png" width="80px">
         <ul class="main-nav">
-            <li><a href="NoahLileContactPage.html">contact</a></li>
-            <li><a href="NoahLileAbout.html">about</a></li>
-            <li><a href="NoahLileArtAndImageGallery.html">image gallery</a></li>
-            <li><a href="NoahLileSummoningHowToSummonNoah.html">summoning.
+            <li><a href="index.html">contact</a></li>
+            <li><a href="Noah-Lile-About.html">about</a></li>
+            <li><a href="Noah-Lile-Art-And-Image-Gallery.html">image gallery</a></li>
+            <li><a href="Noah-Lile-Summoning-How-To-Summon-Noah.html">summoning.
     
             </a></li>
         </ul>
@@ -58,6 +58,9 @@
 
 
 
+</body>
+
+</html>
 </body>
 
 </html>
