Update and rename NoahLileArtAndImageGallery.html to Noah-Lile-Art-And-Image-Gallery.html

--- a/Noah-Lile-Art-And-Image-Gallery.html
+++ b/Noah-Lile-Art-And-Image-Gallery.html
@@ -32,10 +32,10 @@
     <header class="main-header">
         <img src="images/noah2.png" width="80px">
         <ul class="main-nav">
-            <li><a href="NoahLileContactPage.html">contact</a></li>
-            <li><a href="NoahLileAbout.html">about</a></li>
-            <li><a href="NoahLileArtAndImageGallery.html">image gallery</a></li>
-            <li><a href="NoahLileSummoningHowToSummonNoah.html">summoning.
+            <li><a href="index.html">contact</a></li>
+            <li><a href="Noah-Lile-About.html">about</a></li>
+            <li><a href="Noah-Lile-Art-And-Image-Gallery.html">image gallery</a></li>
+            <li><a href="Noah-Lile-Summoning-How-To-Summon-Noah.html">summoning.
     
             </a></li>
         </ul>
@@ -50,7 +50,7 @@
             <br>Image & Art Gallery
         </h1>
         <nav>
-            <li><a href="NoahLileFriendsGallery.html">My friends sent me so many images they get their own page</a></li>
+            <li><a href="Noah-Lile-Friends-Gallery.html">My friends sent me so many images they get their own page</a></li>
         </nav>
         <p>
             <img id="raccoon1" src="images/art/raccoon1.jpg" alt="A cute raccoon blushiing drawn on a whiteboard" width="200">
@@ -69,6 +69,11 @@
     </div> <!-- end of center div-->
 
 
+
+
+</body>
+
+</html>
 
 
 </body>
