--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta name="viewport" content="width=device=width, initial scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="Contact Page Noah Lile" content="Noah Lile's contact page. Learn more">
 
