--- a/Noah-Lile-Summoning-How-To-Summon-Noah.html
+++ b/Noah-Lile-Summoning-How-To-Summon-Noah.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta name="viewport" content="width=device=width, initial scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="Summoning How To Noah Lile" content="How to summon Noah Lile, the SCARIEST and most FEARSOME man around. Learn more">
 
