--- a/Noah-Lile-Friends-Gallery.html
+++ b/Noah-Lile-Friends-Gallery.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta name="viewport" content="width=device=width, initial scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="Noah Lile Friends" content="Noah Lile's gallery of friends and hijinks. Learn more">
 
