--- a/Noah-Lile-Art-And-Image-Gallery.html
+++ b/Noah-Lile-Art-And-Image-Gallery.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta name="viewport" content="width=device=width, initial scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="Image Gallery Art Noah Lile" content="Noah Lile's art and image gallery! Learn more">
 
