--- a/Noah-Lile-About.html
+++ b/Noah-Lile-About.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta name="viewport" content="width=device=width, initial scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="About Noah Lile" content="Everything about Noah Lile! Learn more">
 
