--- a/Noah-Lile-About.html
+++ b/Noah-Lile-About.html
@@ -50,7 +50,7 @@
             <br>About Page
         </h1>
         <h2> Highschool Student | College Student | Subpar Artist | Professional Idiot</h2>
-        <p>My name is Noah C. Lile. I was born on June 18th, 2008, in Idaho Falls, Idaho. Right now I am going into my junior year of highschool. I am also taking duel credit classes at my local college, College of Eastern Idaho. In my spare time I mostly play videogames, browse through social media, longboard, and draw. If you need to contact me for whatever reason, you can find my email on the contact page.</p>
+        <p>My name is Noah C. Lile. I was born on June 18th, 2008, in Idaho Falls, Idaho. Right now I am going into my junior year of highschool. I am also taking dual credit classes at my local college, College of Eastern Idaho. In my spare time I mostly play videogames, browse through social media, longboard, and draw. If you need to contact me for whatever reason, you can find my email on the contact page.</p>
      
         <!--TEMP TEXT, think of something else later!-->
     </div> <!-- end of center div-->
